--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     container: quay.io/pypa/manylinux2014_x86_64
     strategy:
       matrix:
-        python-version: [[37, "3.7"], [38, "3.8"], [39, "3.9"], [310, "3.10"]]
+        python-version: [[37, "3.7"], [38, "3.8"], [39, "3.9"], [310, "3.10"],[311, "3.11"]]
     steps:
       - uses: actions/checkout@v2
 
@@ -86,7 +86,7 @@ jobs:
     strategy:
       matrix:
         os: ["windows-latest", "macos-10.15"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10","3.11"]
     steps:
       - uses: actions/checkout@v2
 
@@ -147,7 +147,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10","3.11"]
     steps:
       - uses: actions/checkout@v2
 
@@ -209,7 +209,7 @@ jobs:
     needs: [win-and-mac, linux, apple-arm]
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10","3.10"]
         os: [macos-10.15, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
